...
                        <viewLayoutGuide key="safeArea" id="Etz-Qo-EvR"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="VEl-ze-Zhj">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="1z8-Id-hGP"/>
                    </navigationItem>
...
                                                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TRx-C1-oAh">
                                                                <rect key="frame" x="161.5" y="0.0" width="45" height="44"/>
                                                                <state key="normal" image="email"/>
                                                            </button>
                                                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RuV-aB-aT7">
...
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delete" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvp-xK-Gko">
                                                            <rect key="frame" x="24" y="0.0" width="351" height="43.5"/>
                                                            <constraints>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="vha-hW-Tcm">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="iAG-Wg-mMA"/>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K8x-jL-4QA">
                                                    <rect key="frame" x="0.0" y="0.0" width="102" height="43.5"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7D-CD-xOK">
                                                    <rect key="frame" x="0.0" y="0.0" width="102" height="43.5"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mobile" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ovr-D5-ln5">
                                                    <rect key="frame" x="0.0" y="0.0" width="102" height="43.5"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                    </tableView>
                    <navigationItem key="navigationItem" id="qXl-Yz-ce9">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="kuC-b9-RCh"/>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="54Y-My-td7"/>
                    </navigationItem>
                    <connections>
...
