...
        tableView.rx.itemSelected
            .subscribe(onNext: { indexPath in
                if indexPath.section == 1 && indexPath.row == 0 {
                    output.deleteContact.drive()
                    .disposed(by: self.disposeBag)
                    
                    let alertController = UIAlertController(title: "GoJek", message: "Contact Deleted", preferredStyle: .alert)
                    alertController.addAction(UIAlertAction(title: "OK", style: .default) { (action: UIAlertAction) in
                        self.navigationController?.popViewController(animated: true)
                    })
                    self.present(alertController, animated: true, completion: nil)
                }
            }).disposed(by: disposeBag)
        
...
